vivado/new214/proj_extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.1 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:1:
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:38:17: error: expected identifier or '('
  const float (*)[2] x;
                ^
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:39:11: error: expected identifier or '('
  float (*)[2][2] phi;
          ^
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c:40:23: error: use of undeclared identifier 'x'
  sbr_autocorrelate_c(x, phi);
                      ^
3 errors generated.
INFO: [HLS 200-10] Opening project '/home/vivado/HLStools/vivado/new214/proj_extr_.FFmpeglibavcodecscpr.h_decode_run_i_with_main.c'.
INFO: [HLS 200-10] Opening solution '/home/vivado/HLStools/vivado/new214/proj_extr_.FFmpeglibavcodecscpr.h_decode_run_i_with_main.c/solution1'.
